# Machine-Learning-Basics

./: .gitignore  pyproject.toml
benchamark/: hdbscan_benchmark.ipynb
lab1/: README.md  notebook.html  notebook.ipynb
lab2/: README.md  notebook.html  notebook.ipynb
lab3/: README.md  notebook.html  notebook.ipynb
lab4/: README.md  notebook.html  notebook.ipynb
lab5/: README.md  notebook.html  notebook.ipynb
lab6/: README.md  notebook.html  notebook.ipynb
lab7/: .gitignore  README.md  notebook.html  notebook.ipynb
