[project]
name = "basics-of-machine-learning"
version = "1.0.0"
description = ""
authors = [{name = "Jakub Adamczyk (j-adamczyk)", email = "jadamczy@agh.edu.pl"}]
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "feature-engine",
    "jupyter",
    "matplotlib",
    "pandas==2.*",
    "pillow",
    "pyarrow",
    "pynndescent",
    "scikit-fingerprints",
    "scikit-learn>=0.24",
    "scikit-learn-extra",
    "seaborn",
    "sentence_transformers",
    "numpy",
    "torch",
    "tqdm"
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.uv.sources]
torch = [{  index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"  }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]
exclude = ["**notebook.ipynb"]
