[project]
name = "basics-of-machine-learning"
version = "1.0.0"
description = ""
authors = [{name = "Jakub Adamczyk (j-adamczyk)", email = "jadamczy@agh.edu.pl"}]
readme = "README.md"

requires-python = "==3.11.*"

dependencies = [
    "fast-langdetect",
    "feature-engine",
    "imbalanced-learn",
    "jupyter",
    "matplotlib",
    "pandas==2.*",
    "pillow",
    "plotly",
    "pyarrow",
    "pynndescent",
    "pyod",
    "scikit-fingerprints",
    "scikit-learn>=0.24",
    "seaborn",
    "sentence_transformers",
    "numpy==1.*",
    "torch",
    "tqdm",
    "scikit-learn-extra>=0.3.0",
    "xgboost",
    "arfs",
    "lightgbm",
    "umap-learn",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.uv.sources]
torch = [{  index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'"  }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff.lint]
ignore = [
    "E731",  # lambda expressions
]
exclude = ["**notebook.ipynb"]
